Add author name to the to-do list

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1>To-Do List</h1>
     <input type="text" id="taskInput" placeholder="Enter a task">
     <button onclick="addTask()">Add</button>
-
+<h1> abhishek shivhare</h1>
     <h2>Tasks</h2>
     <ul id="taskList"></ul>
 
